{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "05f58407-1b1c-48ab-b4f2-e72acd140d26",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "c39fa1b9-0395-4bb0-beea-de7d8252686c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "174f03b2-cccf-47b3-a0e4-d16f8ea0b592",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5534d546-1d66-4700-8a07-935f3c6b233e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cbf77eb-c8ed-441d-9dcd-e123d29f9175",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}