{
    "name": "InputMapping",
    "maps": [
        {
            "name": "Click",
            "id": "9ac7d320-9d1d-4a74-acc9-364b6a774550",
            "actions": [
                {
                    "name": "PlacePortal",
                    "type": "Value",
                    "id": "189d3312-8a12-4cbd-840e-67c15bd69f4c",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9886bc44-324f-4bb9-be74-4615cd42f89e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacePortal",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Scroll",
            "id": "ab04a959-8813-4847-bfd6-751b758a0cf6",
            "actions": [
                {
                    "name": "RotatePortal",
                    "type": "Value",
                    "id": "672817cf-9f85-4050-ab62-21f806bf46ee",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56236532-aaf0-4cae-a1c5-e7a437b06519",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotatePortal",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}